--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -39,49 +39,63 @@
       font-size: 12px;
       //letter-spacing: 0.5px;
       //word-spacing: 0.1px;
-      line-height: 13px;
+      //line-height: 13px;
       border-top: 1px solid #edf2f6;
 
       .comment-bubble{
         padding: 10px;
 
         .comment-content{
-          .postedBy{
-            color: #545566;
-            font-weight: bold;
-            &:hover{
-              text-decoration: underline;
-              cursor: pointer;
+          display: flex;
+          align-items: center;
+
+          .comment-photo{
+            align-self: flex-start;
+            img{
+              height: 32px;
+              width: 32px;
+              border-radius: 50%;
+              margin-right: 10px;
             }
           }
-          .content{
-
-          }
-        }
-        .comment-actions{
-          .action{
-            padding: 5px 5px 0 0;
-            display: inline-block;
-
-            .primary{
+          .comment-details {
+            .name{
+              color: #545566;
               font-weight: bold;
-              cursor: pointer;
-              &:hover{
+              &:hover {
                 text-decoration: underline;
+                cursor: pointer;
               }
             }
-            .label{
-              font-size: 11px;
-              font-weight: bold;
-              cursor: pointer;
-              color: #b1b1b1;
+            .content{
+              //padding: 5px 0;
+            }
+            .comment-actions{
+              .action{
+                padding: 5px 5px 0 0;
+                display: inline-block;
 
-              &.info{
-                cursor: default;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
+                .primary{
+                  font-weight: bold;
+                  cursor: pointer;
+                  &:hover{
+                    text-decoration: underline;
+                  }
+                }
+                .label{
+                  font-size: 11px;
+                  font-weight: bold;
+                  cursor: pointer;
+                  color: #b1b1b1;
+
+                  &.info{
+                    cursor: default;
+                    -webkit-user-select: none;
+                    -moz-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
+                  }
+                }
               }
             }
           }
@@ -127,40 +141,54 @@
           font-size: 12px;
           //letter-spacing: 0.5px;
           //word-spacing: 0.1px;
-          line-height: 13px;
+          //line-height: 13px;
           padding: 5px 10px;
           border-bottom: 1px solid #edf2f6;
 
           .reply-content {
-            .postedBy {
-              color: #545566;
-              font-weight: bold;
-              &:hover {
-                text-decoration: underline;
-                cursor: pointer;
+            display: flex;
+            align-items: center;
+
+            .reply-photo{
+              align-self: flex-start;
+              img{
+                height: 32px;
+                width: 32px;
+                border-radius: 50%;
+                margin-right: 10px;
               }
             }
-            .content {
-
-            }
-          }
-          .reply-actions {
-            .action{
-              padding: 5px 5px 0 0;
-              display: inline-block;
-
-              .primary{
+            .reply-details {
+              .name{
+                color: #545566;
                 font-weight: bold;
-                cursor: pointer;
-                &:hover{
+                &:hover {
                   text-decoration: underline;
+                  cursor: pointer;
                 }
               }
-              .label{
-                font-size: 11px;
-                font-weight: bold;
-                cursor: pointer;
-                color: #b1b1b1;
+              .content{
+                //padding: 5px 0;
+              }
+              .reply-actions {
+                .action{
+                  padding: 5px 5px 0 0;
+                  display: inline-block;
+
+                  .primary{
+                    font-weight: bold;
+                    cursor: pointer;
+                    &:hover{
+                      text-decoration: underline;
+                    }
+                  }
+                  .label{
+                    font-size: 11px;
+                    font-weight: bold;
+                    cursor: pointer;
+                    color: #b1b1b1;
+                  }
+                }
               }
             }
           }
