--- a/server/views/partial/header.ejs
+++ b/server/views/partial/header.ejs
@@ -1,1 +1,22 @@
-<br/><br/>This is header <a href="/login">Log In</a>  <a href="/signup">Sign Up</a> <br/><br/>
+<header id="header">
+    <div class="left-content">
+        <a href="/posts">
+            <div class="app-logo">
+                EXPRESS MATCH
+            </div>
+        </a>
+    </div>
+    <div class="right-content">
+        <div class="menu-items">
+            <div class="menu-item">
+                <a href="/login">Log in</a>
+            </div>
+            <div class="menu-item">
+                <a href="/signup">Sign up</a>
+            </div>
+        </div>
+        <div class="profile">
+
+        </div>
+    </div>
+</header>
