--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -45,11 +45,11 @@
         height: 30px;
         width: 30px;
         border-radius: 50%; }
-        #header .right-content .profile .menu-toggle .profile-picture {
-          height: 30px;
-          width: 30px;
+        #header .right-content .profile .menu-toggle .profile-picture img {
+          height: 32px;
+          width: 32px;
           border-radius: 50%;
-          border: 1px solid #ccc; }
+          margin-right: 10px; }
         #header .right-content .profile .menu-toggle .dropdown-menu {
           max-width: 200px; }
           #header .right-content .profile .menu-toggle .dropdown-menu .menu-item {
@@ -151,15 +151,37 @@ article.login {
       border-bottom: 1px solid #ccc; }
       article.login .login-container .header .main-title {
         font-size: 28px; }
+      article.login .login-container .header a {
+        font-weight: normal;
+        text-decoration: none;
+        cursor: hand; }
+        article.login .login-container .header a:hover {
+          text-decoration: underline; }
+        article.login .login-container .header a:active {
+          color: #181ca0; }
+        article.login .login-container .header a:visited {
+          color: #1f24cc; }
     article.login .login-container .content-local {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
+      article.login .login-container .content-local .form-error {
+        color: red; }
       article.login .login-container .content-local .form-group {
         padding-bottom: 10px; }
         article.login .login-container .content-local .form-group:last-child {
           padding-bottom: 0px; }
         article.login .login-container .content-local .form-group input[type="text"], article.login .login-container .content-local .form-group input[type="password"] {
           width: 100%; }
+        article.login .login-container .content-local .form-group a {
+          font-weight: normal;
+          text-decoration: none;
+          cursor: hand; }
+          article.login .login-container .content-local .form-group a:hover {
+            text-decoration: underline; }
+          article.login .login-container .content-local .form-group a:active {
+            color: #181ca0; }
+          article.login .login-container .content-local .form-group a:visited {
+            color: #1f24cc; }
         article.login .login-container .content-local .form-group button[type="submit"] {
           font-size: 16px;
           width: auto;
@@ -183,7 +205,7 @@ article.login {
 article.sign-up {
   display: flex;
   justify-content: center;
-  min-height: 560px; }
+  min-height: 500px; }
   article.sign-up .sign-up-container {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -201,9 +223,21 @@ article.sign-up {
       border-bottom: 1px solid #ccc; }
       article.sign-up .sign-up-container .header .main-title {
         font-size: 28px; }
+      article.sign-up .sign-up-container .header a {
+        font-weight: normal;
+        text-decoration: none;
+        cursor: hand; }
+        article.sign-up .sign-up-container .header a:hover {
+          text-decoration: underline; }
+        article.sign-up .sign-up-container .header a:active {
+          color: #181ca0; }
+        article.sign-up .sign-up-container .header a:visited {
+          color: #1f24cc; }
     article.sign-up .sign-up-container .content-local {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
+      article.sign-up .sign-up-container .content-local .form-error {
+        color: red; }
       article.sign-up .sign-up-container .content-local .form-group {
         padding-bottom: 10px; }
         article.sign-up .sign-up-container .content-local .form-group:last-child {
