--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -25,10 +25,29 @@ article.sign-up{
       .main-title{
         font-size: 28px;
       }
+      a{
+        font-weight: normal;
+        text-decoration: none;
+        cursor: hand;
+
+        &:hover{
+          text-decoration: underline;
+        }
+        &:active{
+          color:#181ca0;
+        }
+        &:visited{
+          color:#1f24cc;
+        }
+      }
     }
     .content-local{
       padding: 20px;
       border-bottom: 1px solid #ccc;
+
+      .form-error{
+        color: red;
+      }
 
       .form-group{
         padding-bottom: 10px;
