--- a/server/views/emlogin.ejs
+++ b/server/views/emlogin.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Express Match - Express and find your partner</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -21,10 +21,6 @@
                 </div>
                 <div class="content-local">
                     <form action="/login" method="post">
-                        <!-- show any messages that come back with authentication -->
-                        <% if (message.length > 0) { %>
-                            <div class="form-error"><%= message %></div>
-                        <% } %>
                         <div class="form-group">
                             <label for="email">
                                 Email address:
@@ -50,11 +46,15 @@
                         <div class="form-group">
                             <button type="submit" class="em-form-control">Login</button>
                         </div>
+                        <!-- show any messages that come back with authentication -->
+                        <% if (message.length > 0) { %>
+                        <div class="form-error"><%= message %></div>
+                        <% } %>
                     </form>
                 </div>
                 <div class="content-social">
                     <a href="/auth/facebook" class="">
-                        <span class="">Log in with</span> Facebook
+                        <span class="">Log in with Facebook</span>
                     </a>
                 </div>
             </div>
