--- a/server/views/emsignup.ejs
+++ b/server/views/emsignup.ejs
@@ -20,10 +20,14 @@
             </div>
             <div class="content-local">
                 <form action="/signup" method="post">
-                    <!-- show any messages that come back with authentication -->
-                    <% if (message.length > 0) { %>
-                    <div class="form-error"><%= message %></div>
-                    <% } %>
+                    <div class="form-group">
+                        <label for="name">
+                            Your Name:
+                        </label>
+                        <div class="em-form-control">
+                            <input type="text" name="name" />
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="email">
                             Email address:
@@ -43,6 +47,10 @@
                     <div class="form-group">
                         <button type="submit" class="em-form-control">Submit</button>
                     </div>
+                    <!-- show any messages that come back with authentication -->
+                    <% if (message.length > 0) { %>
+                    <div class="form-error"><%= message %></div>
+                    <% } %>
                 </form>
             </div>
             <div class="content-social">
