--- a/server/views/partial/footer.ejs
+++ b/server/views/partial/footer.ejs
@@ -1,30 +1,30 @@
-<footer>
-    <div class="footer-container">
-        <section class="subscription">
-            <div class="left-panel">
-                <div>
-                    GET OUR NEWSLETTER
-                </div>
-                <div>
-                    Delicious updates, interesting news and more
-                </div>
-            </div>
-            <div class="right-panel">
-                <div>
-                    <input type="text" placeholder="Enter your e-mail address"/>
-                </div>
-                <div>
-                    <button>Sign Up</button>
-                </div>
-            </div>
-        </section>
-        <section class="links">
-            <div>Profile</div>
-            <div>Contact Us</div>
-        </section>
-        <section class="social">
-            <div>Facebook</div>
-            <div>Twitter</div>
-        </section>
-    </div>
-</footer>
+<!--<footer>-->
+    <!--<div class="footer-container">-->
+        <!--<section class="subscription">-->
+            <!--<div class="left-panel">-->
+                <!--<div>-->
+                    <!--GET OUR NEWSLETTER-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--Delicious updates, interesting news and more-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="right-panel">-->
+                <!--<div>-->
+                    <!--<input type="text" placeholder="Enter your e-mail address"/>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<button>Sign Up</button>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</section>-->
+        <!--<section class="links">-->
+            <!--<div>Profile</div>-->
+            <!--<div>Contact Us</div>-->
+        <!--</section>-->
+        <!--<section class="social">-->
+            <!--<div>Facebook</div>-->
+            <!--<div>Twitter</div>-->
+        <!--</section>-->
+    <!--</div>-->
+<!--</footer>-->
