--- a/server/views/emlogin.ejs
+++ b/server/views/emlogin.ejs
@@ -26,7 +26,7 @@
                                 Email address:
                             </label>
                             <div class="em-form-control">
-                                <input type="text" name="email" />
+                                <input type="email" name="email" required/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -37,7 +37,7 @@
                                 <a href="#">Forgot your Password?</a>
                             </div>
                             <div class="em-form-control">
-                                <input type="password" name="password" />
+                                <input type="password" name="password" required/>
                             </div>
                         </div>
                         <div class="form-group">
