--- a/server/scss/header.scss
+++ b/server/scss/header.scss
@@ -72,6 +72,11 @@
             width: 32px;
             border-radius: 50%;
             margin-right: 10px;
+            transition: transform .2s;
+
+            &:hover{
+              transform: scale(1.1);
+            }
           }
         }
         .dropdown-menu {
