--- a/server/scss/login.scss
+++ b/server/scss/login.scss
@@ -55,7 +55,7 @@ article.login{
         &:last-child{
           padding-bottom: 0px;
         }
-        input[type="text"], input[type="password"]{
+        input[type="text"], input[type="password"], input[type="email"]{
           width: 100%;
         }
         a{
