--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -55,7 +55,7 @@ article.sign-up{
         &:last-child{
           padding-bottom: 0px;
         }
-        input[type="text"], input[type="password"]{
+        input[type="text"], input[type="password"], input[type="email"]{
           width: 100%;
         }
         button[type="submit"]{
