--- a/server/views/emsignup.ejs
+++ b/server/views/emsignup.ejs
@@ -25,7 +25,7 @@
                             Your Name:
                         </label>
                         <div class="em-form-control">
-                            <input type="text" name="name" />
+                            <input type="text" name="name" required/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -33,7 +33,7 @@
                             Email address:
                         </label>
                         <div class="em-form-control">
-                            <input type="text" name="email" />
+                            <input type="email" name="email" required/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -41,7 +41,7 @@
                             Password:
                         </label>
                         <div class="em-form-control">
-                            <input type="password" name="password" />
+                            <input type="password" name="password" required/>
                         </div>
                     </div>
                     <div class="form-group">
