--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -55,7 +55,7 @@
             background-color: $em-bg-white;
           }
         }
-        input[type="reset"], input[type="submit"]{
+        input[type="reset"], input[type="submit"], input[type="button"]{
           border-radius: 10px;
           margin-right: 5px;
           color: #888da8;
@@ -69,6 +69,9 @@
           &:hover:enabled{
             opacity: 0.8;
           }
+        }
+        input.cancel{
+
         }
       }
       .sub-text{
