--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -147,8 +147,7 @@ article.login {
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
-    height: 100%; }
+    background-color: #fff; }
     article.login .login-container .header {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
