--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -218,8 +218,7 @@ article.sign-up {
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
-    height: 100%; }
+    background-color: #fff; }
     article.sign-up .sign-up-container .header {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
