--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -16,7 +16,7 @@ article.sign-up{
     font-weight: bold;
     font-size: 12px;
     background-color: #fff;
-    height: 100%;
+    //height: 100%;
 
     .header{
       padding: 20px;
