Styling and reset form

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import './variables.scss';
 @import './calendar.scss';
 @import './spinner.scss';
+@import './modal.scss';
 @import './placesautocomplete.scss';
 @import './typeaheadautocomplete.scss';
 @import './header.scss';
