--- a/server/views/emlogin.ejs
+++ b/server/views/emlogin.ejs
@@ -11,7 +11,7 @@
         <article class="login">
             <div class="login-container">
                 <div class="header">
-                    <div class="main-title">Log In<i class="fas fa-lock"></i></div>
+                    <div class="main-title">Log In</div>
                     <div class="sub-title">
                         <span class="signup-text">Not registered with our site yet?</span>
                         <span class="signup-link">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="content-social">
                     <a href="/auth/facebook" class="">
-                        <span class="">Log in with Facebook</span>
+                        <span class="btn-fb-login">Log in with Facebook</span>
                     </a>
                 </div>
             </div>
