--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -16,7 +16,7 @@
             Looking for a partner?
         </div>
         <div class="sub-content">
-            Find your love using Express Match
+            Find love using Express Match, anonymously.
         </div>
         <div class="sign-up">
             <a href="/signup">
