--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -10,7 +10,7 @@
       box-shadow: none;
     }
     .em-form-control{
-      padding: 20px;
+      padding: 10px 20px;
       display: flex;
       align-items: center;
       border-bottom: 1px solid #e6ecf5;
@@ -23,7 +23,7 @@
         color: #545566;
       }
       .field-value{
-        padding: 10px 0 0 0;
+        //padding: 10px 0 0 0;
 
         input, select, textarea{
           height: 30px;
@@ -95,7 +95,7 @@
       -ms-progress-appearance: none;
     }
     select{
-      padding: 8px;
+      padding-left: 8px;
     }
     ::-webkit-input-placeholder { /* WebKit browsers */
       color: transparent;
