Adding profile page re-direction for replies

--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -59,7 +59,7 @@
             }
           }
           .comment-details {
-            .name{
+            .name a{
               color: #545566;
               font-weight: bold;
               &:hover {
@@ -159,7 +159,7 @@
               }
             }
             .reply-details {
-              .name{
+              .name a{
                 color: #545566;
                 font-weight: bold;
                 &:hover {
