--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import './posts.scss';
 @import './comments.scss';
 @import './createpost.scss';
+@import './postLikesModal.scss';
 
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.css';
 @import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.css';
