--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -75,6 +75,9 @@
                 padding: 5px 5px 0 0;
                 display: inline-block;
 
+                .logo{
+                  padding: 0 5px 0 0;
+                }
                 .primary{
                   font-weight: bold;
                   cursor: pointer;
@@ -175,6 +178,9 @@
                   padding: 5px 5px 0 0;
                   display: inline-block;
 
+                  .logo{
+                    padding: 0 5px 0 0;
+                  }
                   .primary{
                     font-weight: bold;
                     cursor: pointer;
