--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,12 +7,14 @@
 @import './placesautocomplete.scss';
 @import './typeaheadautocomplete.scss';
 @import './header.scss';
+@import './footer.scss';
 @import './content.scss';
 @import './profile.scss';
 @import './posts.scss';
 @import './comments.scss';
 @import './createpost.scss';
-@import './postLikesModal.scss';
+@import './postlikesmodal';
+@import './uploadphotomodal';
 
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.css';
 @import '../../../node_modules/react-bootstrap-typeahead/css/Typeahead.css';
