--- a/client/src/styles/modal.scss
+++ b/client/src/styles/modal.scss
@@ -10,6 +10,7 @@
       }
       .modal-footer{
         .btn{
+          font-size: 13px;
           &.btn-primary{
             background-color: #888da8;
             border-color: #888da8;
