--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -4,6 +4,8 @@
 @import "footer.scss";
 @import "login.scss";
 @import "signup.scss";
+@import "forgot.scss";
+@import "reset.scss";
 
 ::selection {
   background-color: #e6e6e6;
