--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -1,47 +1,68 @@
-<!-- views/signup.ejs -->
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-    <style>
-        body        { padding-top:80px; }
-    </style>
+    <title>Express Match - Express and find your partner</title>
+    <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container">
-
-<div class="col-sm-6 col-sm-offset-3">
-
-    <h1><span class="fa fa-sign-in"></span> Signup</h1>
-
-    <!-- show any messages that come back with authentication -->
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
-
-    <!-- LOGIN FORM -->
-    <form action="/signup" method="post">
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="em-form-control" name="email">
+    <% include partial/header.ejs %>
+    <article class="sign-up">
+        <div class="sign-up-container">
+            <div class="header">
+                <div class="main-title">Sign Up</div>
+                <div class="sub-title">
+                    <span class="login-text">Already a member? </span>
+                    <span class="login-link">
+                            <a href="/login">Log In</a>
+                        </span>
+                </div>
+            </div>
+            <div class="content-local">
+                <form action="/signup" method="post">
+                    <div class="form-group">
+                        <label for="name">
+                            Your Name:
+                        </label>
+                        <div class="em-form-control">
+                            <input type="text" name="name" required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">
+                            Email address:
+                        </label>
+                        <div class="em-form-control">
+                            <input type="email" name="email" required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">
+                            Password:
+                        </label>
+                        <div class="em-form-control">
+                            <input type="password" name="password" required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="em-form-control">Submit</button>
+                    </div>
+                    <!-- show any messages that come back with authentication -->
+                    <% if (error.length > 0) { %>
+                    <div class="form-error"><%= error %></div>
+                    <% } %>
+                </form>
+            </div>
+            <div class="content-social">
+                <a href="/auth/facebook" class="">
+                    <span class="">Log in with</span> Facebook
+                </a>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="em-form-control" name="password">
-        </div>
+    </article>
 
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
-    </form>
-
-    <hr>
-
-    <p>Already have an account? <a href="/login">Login</a></p>
-    <p>Or go <a href="/">home</a>.</p>
-
-</div>
+    <% include partial/footer.ejs %>
 
 </div>
 </body>
-</html> 
+</html>
